--- a/project_tier/static/css/_layout.scss
+++ b/project_tier/static/css/_layout.scss
@@ -15,6 +15,7 @@ body {
   background: $white;
 }
 .page-header {
+    border-top: 10px solid #222;
   background-color: $red;
   background-image: url('../img/bg-image-15.png');
   background-size: 60px;
